# locomote2

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  __init__.py  fwd.hpp  module.cpp
bindings/python/container/: array.hpp  reference-wrapper.hpp  visitor.hpp
bindings/python/serialization/: archive.hpp
bindings/python/timeopt/: enums.cpp  enums.hpp  expose-timeopt.hpp  phase.cpp  phase.hpp  problem.cpp  problem.hpp
cmake/: cmake_uninstall.cmake
include/locomote2/serialization/: archive.hpp  fwd.hpp  spatial.hpp  xml.hpp
include/locomote2/timeopt/: fwd.hpp  phase.hpp  problem.hpp
script/config/: cfg_timeopt_demo01.yaml
script/demo/: hyq_config.py  test_hyq.py  test_timeopt.py
script/demo/talos/: test_flat.py
script/locomote_planning/: config.py  generate_timeopt_problem_rbprm.py
script/locomote_planning/configs/: timeopt_config.py
src/: CMakeLists.txt
src/timeopt/: phase.cpp  problem.cpp
