
# --- MAIN LIBRARY --- #
SET(LIBRARY_NAME ${PROJECT_NAME})

SET(${LIBRARY_NAME}_STATS_SOURCES
    timeopt/phase.cpp
    timeopt/problem.cpp
  )
SET(${LIBRARY_NAME}_SOURCES
    ${${LIBRARY_NAME}_STATS_SOURCES}
  )

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${HEADERS_FULL_PATH} ${${LIBRARY_NAME}_SOURCES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} eigen3)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} pinocchio)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-timeopt)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} yaml-cpp)

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${Boost_SERIALIZATION_LIBRARIES})
ADD_HEADER_GROUP(HEADERS_FULL_PATH)
ADD_SOURCE_GROUP(${LIBRARY_NAME}_SOURCES)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)

